tests/build/cases/widget/parent_not_widget.stderr
error[E0277]: the trait bound `f32: zero_ui::prelude::new_widget::WidgetImpl` is not satisfied
 --> cases/widget/parent_not_widget.rs:3:1
  |
3 | #[widget($crate::Foo)]
  | ^^^^^^^^^^^^^^^^^^^^^^ the trait `zero_ui::prelude::new_widget::WidgetImpl` is not implemented for `f32`
  |
  = help: the following other types implement trait `zero_ui::prelude::new_widget::WidgetImpl`:
            <implementers-list>
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `on_start__` found for struct `Foo` in the current scope
 --> cases/widget/parent_not_widget.rs:3:1
  |
3 | #[widget($crate::Foo)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  | |
  | method `on_start__` not found for this struct
  | method not found in `Foo`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
